update verify activated API url
