# server/server.py
@@ -9,6 +9,7 @@ from handler import UserHandler
 from handler import UserIdHandler
 from handler import TempHandler
 from handler import TempIdHandler
+from handler import TempVerifyActivationHandler
 from handler import TempOtaHandler
 from handler import TempsHandler
 import db
@@ -36,6 +37,7 @@ def make_app():
     return tornado.web.Application([
         (r"/", MainHandler),
         (r"/v1/users/(.+)/temps/*", TempHandler),
+        (r"/v1/users/(.+)/temps/(.+)/verify-activation/*", TempVerifyActivationHandler),
         (r"/v1/users/(.+)/temps/(.+)/ota/*", TempOtaHandler),
         (r"/v1/users/(.+)/temps/(.+)/*", TempIdHandler),
         (r"/v1/me/*", UserHandler),
